--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,13 @@ server.port=8081
 
 jwt.secret=secret-key
 
-spring.datasource.url=jdbc:mysql://localhost:3306/custom_demo?createDatabaseIfNotExist=true&useSSL=true
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/custom_demo?createDatabaseIfNotExist=true&useSSL=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://54.37.162.102:3306/custom_demo?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username=admin
+spring.datasource.password=Krish@123
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
